# Raylib_Pang_26S

./: .gitignore  CMakeLists.txt  GameSolution.slnx  ZipSourceFolder.bat
Emscripten/: install.bat
Libraries/: CMakeLists.txt  glfw.vcxproj  glfw.vcxproj.filters  raylib.vcxproj  raylib.vcxproj.filters
Scripts/: BuildEmscripten.bat  BuildForMac.sh  GenerateProjectFiles.bat
Source/: GameProject.vcxproj  GameProject.vcxproj.filters  Main.cpp
Source/Game/: Ball.cpp  Ball.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
Source/Helpers/: Drawing.cpp  Drawing.h  InputTypes.h  MathFuncs.cpp  MathFuncs.h  Sprite2D.cpp  Sprite2D.h  Vector.h
